--- a/cmd/aurelius/templates/db-dir.html
+++ b/cmd/aurelius/templates/db-dir.html
@@ -1,37 +1,134 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <style>
-        .footer {
-            position: fixed;
-            right: 0;
-            bottom: 0;
-            height: 15%;
-        }
-        .footer img {
-            height: 100%;
-        }
-        </style>
-    </head>
+<head>
+	<style>
+		body {
+			background-color: #fff2d9;
+			color: #000000;
+		}
+		ul {
+			list-style: none;
+		}
+
+		#header {
+			display: flex;
+			position: fixed;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 3rem;
+			box-shadow: 0px 0px .5rem black;
+		}
+
+		#controls {
+			flex-grow: 1;
+			display: flex;
+			height: 100%;
+		}
+		#controls .clickable {
+			cursor: pointer;
+		}
+		#controls i {
+			font-size: 3rem;
+		}
+		#progress-bar-container {
+			flex-grow: 1;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+		}
+		#progress-bar-empty {
+			position: relative;
+			height: .5rem;
+			border: 1px solid rgba(0,0,0,.54);
+			margin: 0 .5rem;
+		}
+		#progress-bar-fill {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+		}
+		#seek-slider {
+			position: absolute;
+			width: 3rem;
+			height: 200%;
+			top: -50%;
+			background-color: #756f64;
+		}
+
+		#content {
+			margin-top: 4rem;
+		}
+
+		#footer {
+			position: fixed;
+			right: 0;
+			bottom: 0;
+			height: 15%;
+		}
+		#footer img {
+			height: 100%;
+		}
+
+		.material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
+		.material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26); }
+	</style>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+	<script src="/static/js/player.js"></script>
+	<script>
+		window.onload = function() {
+			player = new Player("controls");
+		};
+	</script>
+</head>
 <body>
-    <a href="..">Parent directory</a>
-    <br/><br/>
+	<div id="header">
+		<div id="controls">
+			<div id="play-button" class="clickable">
+				<i class="material-icons md-dark">play_arrow</i>
+			</div>
+			<div id="pause-button" class="clickable">
+				<i class="material-icons md-dark">pause</i>
+			</div>
+			<div id="prev-button" class="clickable">
+				<i class="material-icons md-dark">skip_previous</i>
+			</div>
+			<div id="next-button" class="clickable">
+				<i class="material-icons md-dark">skip_next</i>
+			</div>
+			<div id="progress-bar-container">
+				<div id="progress-bar-empty" class="clickable">
+					<div id="progress-bar-fill"></div>
+					<div id="seek-slider" class="clickable"></div>
+				</div>
+			</div>
+		</div>
+	</div>
 
-    {{- if .Dirs}}
-        {{- range $dir := .Dirs}}
-            <a href="{{$dir}}/">{{$dir}}/</a><br/>
-        {{- end}}
-        <br/>
-    {{- end}}
+	<div id="content">
+		<ul id="dirs">
+			<li><a href="..">Parent directory</a></li>
+			{{- if .Dirs}}
+				{{- range $dir := .Dirs}}
+					<li><a href="{{$dir}}/">{{$dir}}/</a></li>
+				{{- end}}
+			{{- end}}
+		</ul>
 
-    {{- if .Files}}
-        {{- range $file := .Files}}
-            <a href="{{$file}}/stream">{{$file}}</a><br/>
-        {{- end}}
-    {{- end}}
+		<ul id="files">
+			{{- if .Files}}
+				{{- range $file := .Files}}
+					<li><a onclick="player.play('{{$file}}/stream')" href="javascript:void(0);">{{$file}}</a></li>
+				{{- end}}
+			{{- end}}
+		</ul>
+	</div>
 
-    <div class="footer">
-        <img src="/static/aurelius.png">
-    </div>
+	<div id="footer">
+		<img src="/static/aurelius.png">
+	</div>
 </body>
 </html>
