--- a/cmd/aurelius/templates/db-dir.html
+++ b/cmd/aurelius/templates/db-dir.html
@@ -43,8 +43,13 @@
 			<div id="progress-bar-container">
 				<div id="progress-bar-empty" class="clickable">
 					<div id="progress-bar-fill"></div>
-					<div id="seek-slider" class="clickable"></div>
+					<div id="seek-slider-area">
+						<div id="seek-slider" class="clickable"></div>
+					</div>
 				</div>
+			</div>
+			<div>
+				<div id="duration"></div>
 			</div>
 		</div>
 	</div>
