--- a/cmd/aurelius/templates/db-dir.html
+++ b/cmd/aurelius/templates/db-dir.html
@@ -4,6 +4,8 @@
 	<title>aurelius</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<link rel="icon" type="image/png" href="/static/icon.png">
+
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="/static/css/db-dir.css" rel="stylesheet">
 
