--- a/cmd/aurelius/templates/db-dir.html
+++ b/cmd/aurelius/templates/db-dir.html
@@ -41,6 +41,12 @@
 		<div id="status">
 			<div id="status-left">aurelius</div>
 			<div id="status-right"></div>
+			<div id="favorite-button" class="clickable">
+				<i class="material-icons md-dark">favorite_border</i>
+			</div>
+			<div id="unfavorite-button" class="clickable">
+				<i class="material-icons md-dark">favorite</i>
+			</div>
 		</div>
 		<div id="controls">
 			<div id="play-button" class="clickable">
