--- a/cmd/aurelius/static/css/db-dir.css
+++ b/cmd/aurelius/static/css/db-dir.css
@@ -17,6 +17,10 @@ a:hover {
 	box-shadow: 0 1px rgba(0,0,0,.54);
 }
 
+.clickable {
+	cursor: pointer;
+}
+
 #header {
 	position: fixed;
 	top: 0;
@@ -39,17 +43,17 @@ a:hover {
 }
 #status-right {
 	flex-grow: 1;
-	margin-right: 1em;
 	text-align: right;
+	margin-right: 1em;
+}
+#favorite-button, #unfavorite-button {
+	margin-right: 1em;
 }
 
 #controls {
 	display: flex;
 	height: 3rem;
 	color: rgba(0,0,0,.54);
-}
-#controls .clickable {
-	cursor: pointer;
 }
 #controls i {
 	font-size: 3rem;
