keep background gradient fixed

--- a/cmd/aurelius/static/css/db-dir.css
+++ b/cmd/aurelius/static/css/db-dir.css
@@ -4,6 +4,7 @@ html {
 
 body {
 	background: linear-gradient(hsl(39, 8%, 43%) 50%, hsl(39, 8%, 30%));
+	background-attachment: fixed;
 	color: hsl(39, 100%, 93%);
 }
 #header {
