--- a/cmd/aurelius/static/css/db-dir.css
+++ b/cmd/aurelius/static/css/db-dir.css
@@ -32,6 +32,12 @@ body .material-icons {
 
 .clickable {
 	cursor: pointer;
+
+	-moz-user-select: -moz-none;
+	-khtml-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 .clickable.inactive {
 	cursor: default;
