remove link to current directory as playlist

--- a/cmd/aurelius/templates/db-dir.html
+++ b/cmd/aurelius/templates/db-dir.html
@@ -61,12 +61,14 @@
 			{{- end}}
 		</ul>
 
-		<ul id="playlists" class="listing">
-			<li><i class="material-icons">playlist_play</i><a id="current-dir">Current directory</a></li>
-			{{- range $file := .Playlists}}
-				<li><i class="material-icons">playlist_play</i><a href="{{$file}}">{{$file}}</a></li>
-			{{- end}}
-		</ul>
+		{{- if .Playlists}}
+			<ul id="playlists" class="listing">
+				<li><i class="material-icons">playlist_play</i><a id="current-dir">Current directory</a></li>
+				{{- range $file := .Playlists}}
+					<li><i class="material-icons">playlist_play</i><a href="{{$file}}">{{$file}}</a></li>
+				{{- end}}
+			</ul>
+		{{- end}}
 
 		{{- if .Tracks}}
 			<ul id="tracks" class="listing">
