marquee track name if too wide

--- a/cmd/aurelius/templates/db-dir.html
+++ b/cmd/aurelius/templates/db-dir.html
@@ -16,7 +16,9 @@
 	<div id="header">
 		<div id="status">
 			<div id="status-left">aurelius</div>
-			<div id="status-right"></div>
+			<div id="status-right-container">
+				<div id="status-right"></div>
+			</div>
 			<div id="favorite-button" class="clickable">
 				<i class="material-icons">favorite_border</i>
 			</div>
