--- a/cmd/aurelius/static/css/db-dir.css
+++ b/cmd/aurelius/static/css/db-dir.css
@@ -63,10 +63,16 @@ body .material-icons {
 	margin-left: 1em;
 	text-align: left;
 }
-#status-right {
+#status-right-container {
+	overflow: hidden;
 	flex-grow: 1;
-	text-align: right;
 	margin-right: 1em;
+}
+#status-right {
+	max-width: 100%;
+	max-height: 100%;
+	text-align: right;
+	white-space: nowrap;
 }
 #favorite-button, #unfavorite-button {
 	margin-right: 1em;
@@ -90,7 +96,7 @@ body .material-icons {
 #progress-bar-empty {
 	position: relative;
 	height: .5rem;
-	border: 1px solid;
+	box-shadow: inset 0 0 3px black;
 	margin: 0 .5rem;
 }
 #progress-bar-empty.inactive {
