--- a/cmd/aurelius/static/css/db-dir.css
+++ b/cmd/aurelius/static/css/db-dir.css
@@ -66,7 +66,7 @@ body .material-icons {
 #status-right-container {
 	overflow: hidden;
 	flex-grow: 1;
-	margin-right: 1em;
+	margin: 0 .5em 0 .5em;
 }
 #status-right {
 	max-width: 100%;
