fix cropped status text

--- a/cmd/aurelius/templates/db-dir.html
+++ b/cmd/aurelius/templates/db-dir.html
@@ -16,8 +16,10 @@
 	<div id="header">
 		<div id="status">
 			<div id="status-left">aurelius</div>
-			<div id="status-right-container">
-				<div id="status-right"></div>
+			<div id="status-right-spacer">
+				<div id="status-right-container">
+					<div id="status-right"></div>
+				</div>
 			</div>
 			<div id="favorite-button" class="clickable">
 				<i class="material-icons">favorite_border</i>
