split player utility functions into 'util' module

--- a/cmd/aurelius/templates/db-dir.html
+++ b/cmd/aurelius/templates/db-dir.html
@@ -9,8 +9,7 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="/static/css/db-dir.css" rel="stylesheet">
 
-	<script src="/static/js/player.js"></script>
-	<script src="/static/js/db-dir.js"></script>
+	<script src="/static/js/db-dir.js" type="module"></script>
 </head>
 <body>
 	<div id="header">
