--- a/cmd/aurelius/assets/static/css/main.css
+++ b/cmd/aurelius/assets/static/css/main.css
@@ -50,18 +50,14 @@ header {
 	display: flex;
 	height: 3rem;
 	color: rgba(0,0,0,.54);
+	align-items: center;
 }
 #controls .material-icons {
 	font-size: 3rem;
 }
 
-#progress-bar-container {
-	flex-grow: 1;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-}
 #progress-bar-empty {
+	flex: 1;
 	position: relative;
 	height: .5rem;
 	box-shadow: inset 0 0 3px black;
@@ -100,10 +96,6 @@ header {
 	color: black;
 	text-align: right;
 	margin-right: 1em;
-
-	position: relative;
-	top: 50%;
-	transform: translateY(-50%);
 }
 
 /* Footer *********************************************************************/
