--- a/cmd/aurelius/assets/static/css/base.css
+++ b/cmd/aurelius/assets/static/css/base.css
@@ -89,9 +89,9 @@ body {
 
 .dialog {
 	padding: .75rem;
-	min-width: 15em;
+	min-width: 15rem;
 	box-shadow: 0px 0px 1.5rem rgba(0,0,0,.5);
-	border-radius: .25em;
+	border-radius: .25rem;
 }
 
 /* UI elements ****************************************************************/
