--- a/cmd/aurelius/assets/static/css/login.css
+++ b/cmd/aurelius/assets/static/css/login.css
@@ -33,8 +33,8 @@ form ul {
 
 form li {
 	display: flex;
-	padding-left: 1em;
-	padding-right: 1em;
+	padding-left: 1rem;
+	padding-right: 1rem;
 }
 
 form input {
