--- a/cmd/aurelius/assets/static/css/main.css
+++ b/cmd/aurelius/assets/static/css/main.css
@@ -15,33 +15,23 @@ main {
 	max-width: 960px;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 5rem;
+	margin-bottom: 8rem;
 }
 
-/* Player controls ************************************************************/
-header {
+#play-controls {
 	position: fixed;
-	top: 0;
-	left: 0;
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%);
 	width: 100%;
-	height: 4rem;
+	max-width: 1200px;
 	box-shadow: 0px 0px .5rem black;
-}
-
-#status {
-	display: flex;
-	margin-left: 1em;
-	margin-right: 1em;
-}
-#status > * {
-	height: 1em;
-	font-style: italic;
 }
 
 #marquee-spacer {
 	position: relative;
-	flex: 1;
-	margin: 0 .5em 0 .5em;
+	height: 1rem;
+	margin: 0 .5rem 0 .5rem;
 }
 #marquee-container {
 	position: absolute;
@@ -54,20 +44,25 @@ header {
 #marquee {
 	max-width: 100%;
 	max-height: 100%;
-	text-align: right;
 	white-space: nowrap;
+	text-align: center;
+	font-style: italic;
 }
 #marquee:hover {
 	text-decoration: underline;
 }
 
-#controls {
+.control-group {
 	display: flex;
 	height: 3rem;
 	color: rgba(0,0,0,.54);
 	align-items: center;
+	justify-content: center;
 }
-#controls .material-icons {
+.control-group .material-icons {
+	font-size: 4rem;
+}
+#favorite-button .material-icons, #unfavorite-button .material-icons {
 	font-size: 3rem;
 }
 
@@ -106,22 +101,43 @@ header {
 	background-color: hsl(39, 16%, 69%);
 }
 
+#plug {
+	position: absolute;
+	bottom: .5rem;
+	left: .5rem;
+	font-style: italic;
+}
 #duration {
-	width: 6em;
+	position: absolute;
+	bottom: .5rem;
+	right: .5rem;
 	color: black;
-	text-align: right;
-	margin-right: 1em;
 }
 
-/* Footer *********************************************************************/
-footer {
+#menu {
 	position: fixed;
 	z-index: 1;
 	right: 0;
-	bottom: 0;
+	top: 0;
 	margin: .5rem;
 }
-
-footer .material-icons {
+#menu .material-icons {
 	font-size: 3rem;
+}
+
+@media (min-width: 1200px) {
+	#play-controls {
+		bottom: inherit;
+		top: 0;
+	}
+	
+	#menu {
+		top: inherit;
+		bottom: 0;
+	}
+	
+	main {
+		margin-bottom: inherit;
+		margin-top: 8rem;
+	}
 }
