--- a/cmd/aurelius/assets/static/css/main.css
+++ b/cmd/aurelius/assets/static/css/main.css
@@ -61,7 +61,7 @@ main {
 	transform: translateX(-50%);
 	width: 100%;
 	max-width: 1200px;
-	box-shadow: 0px 0px .5rem black;
+	box-shadow: 0px 0px 1rem rgba(0,0,0,.5);
 }
 
 #marquee-spacer {
