--- a/cmd/aurelius/assets/static/css/main.css
+++ b/cmd/aurelius/assets/static/css/main.css
@@ -1,16 +1,3 @@
-body {
-	background:
-		left top / calc((100% - (960px + 2rem)) / 2) fixed no-repeat linear-gradient(
-			to right,
-			rgba(0,0,0,.25) calc(100% - 150px),
-			rgba(0,0,0,.35) 100%),
-		right top / calc((100% - (960px + 2rem)) / 2) fixed no-repeat linear-gradient(
-			to left,
-			rgba(0,0,0,.25) calc(100% - 150px),
-			rgba(0,0,0,.35) 100%),
-		fixed linear-gradient(hsl(39, 8%, 43%) 50%, hsl(39, 8%, 30%));
-}
-
 main {
 	max-width: 960px;
 	margin-left: auto;
@@ -162,6 +149,27 @@ main {
 }
 #menu .material-icons {
 	font-size: 3rem;
+}
+
+@media (min-width: 960px) {
+	body {
+		background:
+			center top / calc(960px + 2rem) fixed no-repeat linear-gradient(
+				hsl(39, 8%, 43%) 50%,
+				hsl(39, 8%, 30%)),
+			left top / calc((100% - (960px + 2rem)) / 2) fixed no-repeat linear-gradient(
+				to right,
+				rgba(0,0,0,.25) calc(100% - 150px),
+				rgba(0,0,0,.35) 100%),
+			right top / calc((100% - (960px + 2rem)) / 2) fixed no-repeat linear-gradient(
+				to left,
+				rgba(0,0,0,.25) calc(100% - 150px),
+				rgba(0,0,0,.35) 100%),
+			fixed url("/static/img/bg.svg"),
+			fixed linear-gradient(
+				hsl(39, 8%, 43%) 50%,
+				hsl(39, 8%, 30%));
+	}
 }
 
 @media (min-width: 1200px) {
