--- a/cmd/aurelius/assets/static/css/base.css
+++ b/cmd/aurelius/assets/static/css/base.css
@@ -13,6 +13,10 @@ body {
 	color: black;
 }
 
+* {
+	scrollbar-color: hsl(39, 8%, 43%) hsl(39, 8%, 30%);
+}
+
 .material-icons { color: rgba(0, 0, 0, 0.54); }
 .inactive .material-icons { color: rgba(0, 0, 0, 0.26); }
 
