position: absolute -> fixed where appropriate

--- a/cmd/aurelius/assets/static/css/base.css
+++ b/cmd/aurelius/assets/static/css/base.css
@@ -40,7 +40,7 @@ body {
 /* Modal dialog ***************************************************************/
 #modal-overlay {
 	display: none;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	bottom: 0;
@@ -54,7 +54,7 @@ body {
 
 .modal {
 	display: none;
-	position: absolute;
+	position: fixed;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
