--- a/cmd/aurelius/assets/static/css/main.css
+++ b/cmd/aurelius/assets/static/css/main.css
@@ -65,12 +65,15 @@ main {
 	overflow: hidden;
 }
 #marquee {
+	display: block;
 	max-width: 100%;
 	max-height: 100%;
 	white-space: nowrap;
 	text-align: center;
+	text-decoration: none;
 	font-style: italic;
 	font-size: 1.1em;
+	color: inherit;
 }
 #marquee:hover {
 	text-decoration: underline;
