--- a/cmd/aurelius/assets/static/css/main.css
+++ b/cmd/aurelius/assets/static/css/main.css
@@ -156,12 +156,16 @@ main {
 
 #about-dialog:before {
 	content: "";
-	background-image: url("/static/img/aurelius.svg");
-	background-size: contain;
-	background-repeat: no-repeat;
-	background-position: center center;
+	background:
+		center center / contain url("/static/img/aurelius.svg") no-repeat,
+		linear-gradient(
+			hsl(39, 8%, 43%) 50%,
+			hsl(39, 8%, 30%));
+	border-radius: .5rem;
+	box-shadow: inset 0 0 1rem 0rem rgba(0,0,0,.5);
 	display: block;
-	width: 12rem;
+	min-width: 10rem;
+	max-width: 16rem;
 	height: 12rem;
 	margin: 1rem auto;
 }
