aurelius.svg -> aurelius.svgz

--- a/cmd/aurelius/assets/static/css/login.css
+++ b/cmd/aurelius/assets/static/css/login.css
@@ -9,7 +9,7 @@ main {
 
 main:before {
 	content: "";
-	background: center center / contain url("/static/img/aurelius.svg") no-repeat;
+	background: center center / contain url("/static/img/aurelius.svgz") no-repeat;
 	display: block;
 	width: 12rem;
 	height: 12rem;
