--- a/cmd/aurelius/assets/static/css/base.css
+++ b/cmd/aurelius/assets/static/css/base.css
@@ -33,13 +33,14 @@ body {
 	-ms-user-select: none;
 	user-select: none;
 }
-.clickable:hover{
-	text-decoration: underline;
-}
 .clickable.inactive {
 	cursor: default;
 }
-.clickable.inactive:hover{
+
+.clickable:hover {
+	text-decoration: underline;
+}
+.clickable.inactive:hover, .clickable i:hover {
 	text-decoration: none;
 }
 
